--- a/packages.yml
+++ b/packages.yml
@@ -1,4 +1,4 @@
 packages:
   - package: calogica/dbt_expectations
-    version: []
+    version: [">0.8.0"]
     # <see https://github.com/calogica/dbt-expectations/releases/latest> for the latest version tag
