--- a/models/analytics/fact_sales_order_line.yml
+++ b/models/analytics/fact_sales_order_line.yml
@@ -59,3 +59,10 @@ models:
               config:
                 # remove undefined record
                 where: "backorder_order_key <> 0"
+      
+      - name: order_date
+        tests:
+          - not_null
+          - dbt_utils.accepted_range:
+              min_value: "'2013-01-01'"
+              max_value: 'CURRENT_DATE'
